examples/errors/badoperand.jas
;| Big constant
mov 0xAAAAAAAAAAA, rr

;| Bad register
mov r00, rr

;| Missing brackets
mov [r0, r1
